--- a/app/views/talks/index.html.erb
+++ b/app/views/talks/index.html.erb
@@ -2,7 +2,7 @@
 <div class="book_info row">
   <div class="hidden-xs col-sm-2 col-md-2 col-lg-2"></div>
   <div class="book_img col-xs-4 col-sm-3 col-md-3">
-    <%= image_tag @book.image_url, style: "width: auto;height: 36vh;display: inline-block;" %>
+    <%= image_tag @book.image_url, style: "width: 100%;height: auto;display: inline-block;" %>
   </div>
 
   <div class="book_form hidden-xs col-sm-5 col-md-5 col-lg-5">
