--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -43,8 +43,7 @@
 }
 
 .header{
-  height: 10vh;
-  padding: 0.5em;/*文字周りの余白*/
+  height: 90px;
   color: #010101;/*文字色*/
   background: #eaf3ff;/*背景色*/
   border-bottom: solid 3px #516ab6;/*下線*/
@@ -55,7 +54,7 @@
 }
 
 .top_menu{
-  margin-top: 35px;
+  margin-top: 3vh;
   float: right;
 }
 
