--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -39,7 +39,7 @@
     <% else %>
       <div class="toppage">
         <div class="toppage_message">
-          <div class="toppage_image"><%= image_tag "BOOKTALK_logo.png" , style: "height: 200px;display: inline-block;"  %></div>
+          <div class="toppage_image"><%= image_tag "BOOKTALK_logo.png" , style: "height: 20vh;display: inline-block;"  %></div>
           <%= yield %>
         </div>
       </div>
