--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -152,9 +152,15 @@
   width: 20%;
   height: 30px;
   resize: none;
+  float: left;
   margin-bottom: 10px;
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.form_comment{
+  float: right;
+  text-align: right;
 }
 
 .my_talk {
@@ -162,6 +168,7 @@
 }
 
 .talk_message {
+  text-align: left;
   display: inline-block;
 }
 
@@ -187,10 +194,14 @@ li{
   list-style: none;
 }
 
+.account_create{
+}
+
 .login_form{
+  height:40vh;
+  overflow-y: scroll;
   width: 80%;
   margin: 0 auto;
-  overflow: scroll;
 }
 
 .login_button{
